Попапы, слайдеры, формы-2

--- a/catolog.html
+++ b/catolog.html
@@ -10,7 +10,7 @@
     <!-- Шапка -->
     <div class="catalog-container">
       <header class="page-header">
-        <a class="navigation-logo" href="index.html">
+        <a class="navigation-logo" href="index.html" tabindex="1">
           <img
             class="page-header-logo"
             src="images/header-icons/logo.svg"
@@ -22,12 +22,18 @@
         <nav class="navigation">
           <ul class="navigation-list">
             <li class="navigation-item">
-              <a class="navigation-link navigation-link-main" href="index.html"
+              <a
+                class="navigation-link navigation-link-main"
+                href="index.html"
+                tabindex="2"
                 >Главная</a
               >
             </li>
             <li class="navigation-item">
-              <a class="navigation-link navigation-link-main" href="#"
+              <a
+                class="navigation-link navigation-link-main"
+                href="#"
+                tabindex="3"
                 >О Седоне</a
               >
             </li>
@@ -35,24 +41,27 @@
               <a
                 class="navigation-link navigation-link-main navigation-link-current"
                 href="#"
+                tabindex="4"
                 >Гостиницы</a
               >
             </li>
           </ul>
           <ul class="navigation-list navigation-user">
             <li class="navigation-item">
-              <a class="navigation-link" href="#">
+              <a class="navigation-link" href="#" tabindex="5">
                 <span class="visually-hidden">Поиск</span>
               </a>
             </li>
             <li class="navigation-item">
-              <a class="navigation-link" href="#"
+              <a class="navigation-link" href="#" tabindex="6"
                 ><span class="visually-hidden">Реакция</span>
               </a>
               <span class="count-reaction">12</span>
             </li>
             <li class="navigation-item">
-              <a class="navigation-link nav-button" href="#">Хочу сюда</a>
+              <a class="navigation-link nav-button" href="#" tabindex="7"
+                >Хочу сюда</a
+              >
             </li>
           </ul>
         </nav>
@@ -66,7 +75,7 @@
               <ul class="breadcrumbs">
                 <li class="breadcrumb-item">
                   <span class="visually-hidden">Главная</span>
-                  <a href="index.html" class="breadcrumb-link">
+                  <a href="index.html" class="breadcrumb-link" tabindex="8">
                     <svg
                       width="13"
                       height="13"
@@ -89,7 +98,7 @@
                 </li>
 
                 <li class="breadcrumb-item">
-                  <a href="#" class="breadcrumb-link">Гостиницы</a>
+                  <a href="#" class="breadcrumb-link" tabindex="9">Гостиницы</a>
                 </li>
               </ul>
             </div>
@@ -116,7 +125,7 @@
                             name="pool"
                             checked
                           />
-                          <span class="control-mark"></span>
+                          <span class="control-mark" tabindex="10"></span>
                           <span class="control-label">Бассейн</span>
                         </label>
                       </li>
@@ -128,7 +137,7 @@
                             name="parking"
                             checked
                           />
-                          <span class="control-mark"></span>
+                          <span class="control-mark" tabindex="11"></span>
                           <span class="control-label">Парковка</span>
                         </label>
                       </li>
@@ -138,7 +147,7 @@
                             type="checkbox"
                             class="visually-hidden control-input"
                             name="wifi"
-                          /><span class="control-mark"></span>
+                          /><span class="control-mark" tabindex="12"></span>
                           <span class="control-label">Wi-Fi</span>
                         </label>
                       </li>
@@ -155,7 +164,7 @@
                             class="visually-hidden control-input"
                             name="type-of-house"
                             checked
-                          /><span class="control-mark"></span>
+                          /><span class="control-mark" tabindex="13"></span>
                           <span class="control-label">Гостиница</span>
                         </label>
                       </li>
@@ -165,7 +174,7 @@
                             type="radio"
                             class="visually-hidden control-input"
                             name="type-of-house"
-                          /><span class="control-mark"></span>
+                          /><span class="control-mark" tabindex="14"></span>
                           <span class="control-label">Мотель</span>
                         </label>
                       </li>
@@ -175,7 +184,7 @@
                             type="radio"
                             class="visually-hidden control-input"
                             name="type-of-house"
-                          /><span class="control-mark"></span>
+                          /><span class="control-mark" tabindex="15"></span>
                           <span class="control-label">Апартаменты</span>
                         </label>
                       </li>
