Попапы, слайдеры, формы-4

--- a/catolog.html
+++ b/catolog.html
@@ -10,7 +10,7 @@
     <!-- Шапка -->
     <div class="catalog-container">
       <header class="page-header">
-        <a class="navigation-logo" href="index.html" tabindex="1">
+        <a class="navigation-logo" href="index.html">
           <img
             class="page-header-logo"
             src="images/header-icons/logo.svg"
@@ -22,18 +22,12 @@
         <nav class="navigation">
           <ul class="navigation-list">
             <li class="navigation-item">
-              <a
-                class="navigation-link navigation-link-main"
-                href="index.html"
-                tabindex="2"
+              <a class="navigation-link navigation-link-main" href="index.html"
                 >Главная</a
               >
             </li>
             <li class="navigation-item">
-              <a
-                class="navigation-link navigation-link-main"
-                href="#"
-                tabindex="3"
+              <a class="navigation-link navigation-link-main" href="#"
                 >О Седоне</a
               >
             </li>
@@ -41,27 +35,24 @@
               <a
                 class="navigation-link navigation-link-main navigation-link-current"
                 href="#"
-                tabindex="4"
                 >Гостиницы</a
               >
             </li>
           </ul>
           <ul class="navigation-list navigation-user">
             <li class="navigation-item">
-              <a class="navigation-link" href="#" tabindex="5">
+              <a class="navigation-link" href="#">
                 <span class="visually-hidden">Поиск</span>
               </a>
             </li>
             <li class="navigation-item">
-              <a class="navigation-link" href="#" tabindex="6"
+              <a class="navigation-link" href="#"
                 ><span class="visually-hidden">Реакция</span>
               </a>
               <span class="count-reaction">12</span>
             </li>
             <li class="navigation-item">
-              <a class="navigation-link nav-button" href="#" tabindex="7"
-                >Хочу сюда</a
-              >
+              <a class="navigation-link nav-button" href="#">Хочу сюда</a>
             </li>
           </ul>
         </nav>
@@ -75,7 +66,7 @@
               <ul class="breadcrumbs">
                 <li class="breadcrumb-item">
                   <span class="visually-hidden">Главная</span>
-                  <a href="index.html" class="breadcrumb-link" tabindex="8">
+                  <a href="index.html" class="breadcrumb-link">
                     <svg
                       width="13"
                       height="13"
@@ -98,7 +89,9 @@
                 </li>
 
                 <li class="breadcrumb-item">
-                  <a href="#" class="breadcrumb-link" tabindex="9">Гостиницы</a>
+                  <a href="#" class="breadcrumb-link" tabindex-tabindex="0"
+                    >Гостиницы</a
+                  >
                 </li>
               </ul>
             </div>
@@ -125,7 +118,7 @@
                             name="pool"
                             checked
                           />
-                          <span class="control-mark" tabindex="10"></span>
+                          <span class="control-mark" tabindex="0"></span>
                           <span class="control-label">Бассейн</span>
                         </label>
                       </li>
@@ -137,7 +130,7 @@
                             name="parking"
                             checked
                           />
-                          <span class="control-mark" tabindex="11"></span>
+                          <span class="control-mark" tabindex="0"></span>
                           <span class="control-label">Парковка</span>
                         </label>
                       </li>
@@ -147,7 +140,7 @@
                             type="checkbox"
                             class="visually-hidden control-input"
                             name="wifi"
-                          /><span class="control-mark" tabindex="12"></span>
+                          /><span class="control-mark" tabindex="0"></span>
                           <span class="control-label">Wi-Fi</span>
                         </label>
                       </li>
@@ -164,7 +157,7 @@
                             class="visually-hidden control-input"
                             name="type-of-house"
                             checked
-                          /><span class="control-mark" tabindex="13"></span>
+                          /><span class="control-mark" tabindex="0"></span>
                           <span class="control-label">Гостиница</span>
                         </label>
                       </li>
@@ -174,7 +167,7 @@
                             type="radio"
                             class="visually-hidden control-input"
                             name="type-of-house"
-                          /><span class="control-mark" tabindex="14"></span>
+                          /><span class="control-mark" tabindex="0"></span>
                           <span class="control-label">Мотель</span>
                         </label>
                       </li>
@@ -184,7 +177,7 @@
                             type="radio"
                             class="visually-hidden control-input"
                             name="type-of-house"
-                          /><span class="control-mark" tabindex="15"></span>
+                          /><span class="control-mark" tabindex="0"></span>
                           <span class="control-label">Апартаменты</span>
                         </label>
                       </li>
