--- a/index.html
+++ b/index.html
@@ -334,9 +334,9 @@
         </div>
       </footer>
     </div>
-    <div class="modal-container">
+    <div class="modal-container modal-close">
       <div class="modal modal-search-hotel">
-        <button class="model-close-button" tabindex="1">
+        <button class="model-close-button" tabindex="0">
           <span class="visually-hidden">закрыть</span>
         </button>
         <section class="model-content">
