--- a/index.html
+++ b/index.html
@@ -335,7 +335,8 @@
         </div>
       </footer>
     </div>
-    <div class="modal-container modal-close">
+    <!-- Модальное окно -->
+    <div class="modal-container">
       <div class="modal modal-search-hotel">
         <button class="model-close-button" tabindex="0">
           <span class="visually-hidden">закрыть</span>
