--- a/index.html
+++ b/index.html
@@ -336,9 +336,9 @@
       </footer>
     </div>
     <!-- Модальное окно -->
-    <div class="modal-container">
+    <div class="modal-container modal-close">
       <div class="modal modal-search-hotel">
-        <button class="model-close-button" tabindex="0">
+        <button class="model-close-button">
           <span class="visually-hidden">закрыть</span>
         </button>
         <section class="model-content">
