--- a/catolog.html
+++ b/catolog.html
@@ -437,7 +437,12 @@
               action="https://echo.htmlacademy.ru/"
               method="post"
             >
-              <input type="email" name="email" placeholder="Ваш e-mail" />
+              <input
+                type="email"
+                name="email"
+                placeholder="Ваш e-mail"
+                required
+              />
               <button class="subscribe-button" type="submit">
                 Подписаться
               </button>
