--- a/catolog.html
+++ b/catolog.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles/styles.css" />
-    <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="images/favicon.png" />
     <title>Католог</title>
   </head>
   <body>
@@ -299,20 +299,11 @@
               <button class="hotel-button button" type="button">
                 в избранное
               </button>
-              <ul class="star-rating">
-                <li class="star-rating-item">
-                  <span class="visually-hidden">Иконка звезды</span>
-                </li>
-                <li class="star-rating-item">
-                  <span class="visually-hidden">Иконка звезды</span>
-                </li>
-                <li class="star-rating-item">
-                  <span class="visually-hidden">Иконка звезды</span>
-                </li>
-                <li class="star-rating-item">
-                  <span class="visually-hidden">Иконка звезды</span>
-                </li>
-              </ul>
+              <div class="star-rating star-rating-4">
+                <span class="visually-hidden"
+                  >Рейтинг - четырех звездочный отель</span
+                >
+              </div>
               <p class="hotel-rating">Рейтинг: 8,5</p>
             </li>
             <li class="hotel-item">
@@ -330,20 +321,11 @@
               <button class="hotel-button button hotel-chosed" type="button">
                 в избранном
               </button>
-              <ul class="star-rating">
-                <li class="star-rating-item">
-                  <span class="visually-hidden">Иконка звезды</span>
-                </li>
-                <li class="star-rating-item">
-                  <span class="visually-hidden">Иконка звезды</span>
-                </li>
-                <li class="star-rating-item">
-                  <span class="visually-hidden">Иконка звезды</span>
-                </li>
-                <li class="star-rating-item">
-                  <span class="visually-hidden">Иконка звезды</span>
-                </li>
-              </ul>
+              <div class="star-rating star-rating-4">
+                <span class="visually-hidden"
+                  >Рейтинг - четырех звездочный отель</span
+                >
+              </div>
               <p class="hotel-rating">Рейтинг: 9,2</p>
             </li>
             <li class="hotel-item">
@@ -361,17 +343,11 @@
               <button class="hotel-button button" type="button">
                 в избранное
               </button>
-              <ul class="star-rating">
-                <li class="star-rating-item">
-                  <span class="visually-hidden">Иконка звезды</span>
-                </li>
-                <li class="star-rating-item">
-                  <span class="visually-hidden">Иконка звезды</span>
-                </li>
-                <li class="star-rating-item">
-                  <span class="visually-hidden">Иконка звезды</span>
-                </li>
-              </ul>
+              <div class="star-rating star-rating-3">
+                <span class="visually-hidden"
+                  >Рейтинг - трех звездочный отель</span
+                >
+              </div>
               <p class="hotel-rating">Рейтинг: 6,9</p>
             </li>
             <li class="hotel-item">
@@ -389,14 +365,11 @@
               <button class="hotel-button button" type="button">
                 в избранное
               </button>
-              <ul class="star-rating">
-                <li class="star-rating-item">
-                  <span class="visually-hidden">Иконка звезды</span>
-                </li>
-                <li class="star-rating-item">
-                  <span class="visually-hidden">Иконка звезды</span>
-                </li>
-              </ul>
+              <div class="star-rating star-rating-2">
+                <span class="visually-hidden"
+                  >Рейтинг - двух звездочный отель</span
+                >
+              </div>
               <p class="hotel-rating">Рейтинг: 5,0</p>
             </li>
           </ul>
