--- a/index.html
+++ b/index.html
@@ -365,7 +365,9 @@
                   <label class="modal-label" for="adult-count">Взрослые:</label>
                   <div class="count-wrapper">
                     <button type="button" class="modal-button-minus">
-                      <span class="visually-hidden">Знак минус</span>
+                      <span class="visually-hidden"
+                        >Уменьшить количество билетов взрослых</span
+                      >
                       <svg
                         width="14"
                         height="2"
@@ -385,7 +387,9 @@
                       required
                     />
                     <button type="button" class="modal-button-plus">
-                      <span class="visually-hidden">Знак плюс</span>
+                      <span class="visually-hidden"
+                        >Увеличить количество билетов взрослых</span
+                      >
                       <svg
                         width="14"
                         height="14"
@@ -413,7 +417,9 @@
                   </div>
                   <div class="count-wrapper">
                     <button type="button" class="modal-button-minus">
-                      <span class="visually-hidden">Знак минус</span>
+                      <span class="visually-hidden"
+                        >уменьшить количество билетов детей</span
+                      >
                       <svg
                         width="14"
                         height="2"
@@ -433,7 +439,9 @@
                       required
                     />
                     <button type="button" class="modal-button-plus">
-                      <span class="visually-hidden">Знак плюс</span>
+                      <span class="visually-hidden"
+                        >Увеличить количество билетов детей</span
+                      >
                       <svg
                         width="14"
                         height="14"
